提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -845,6 +845,8 @@ public class Trie {
 
 ### 贪心算法
 
+
+
 贪心算法最常用的方式:
 
 1.构造一个比较器对数组进行排序
@@ -852,6 +854,10 @@ public class Trie {
 注意:排序策略必须要有传递性，否则无意义
 
 2.构造堆结构
+
+
+
+
 
 题目
 
@@ -885,6 +891,10 @@ public static int lessMoney(int []arr){
     return ans;
 }
 ```
+
+
+
+
 
 
 
@@ -924,6 +934,8 @@ public static int bestArrange(program[]programs,int timePoint){
     return result;
 }
 ```
+
+
 
 3.字典序问题
 
@@ -992,13 +1004,29 @@ m表示你初始的资金
 
 
 
+
+
+
+
 ### 补充:n皇后问题
+
+
+
+
+
+
 
 
 
 ### 哈希函数与哈希表
 
 哈希表特点
+
+
+
+
+
+
 
 ### 并查集
 
@@ -1134,6 +1162,12 @@ public class UnionFind {
 
 
 
+
+
+
+
+
+
 ### KMP算法
 
 解决问题
@@ -1148,11 +1182,23 @@ public class UnionFind {
 
 代码实现:
 
+
+
+
+
+
+
 ### Manacher算法
 
 解决问题:
 
 基本原理:
+
+
+
+
+
+
 
 ### 滑动窗口
 
@@ -1160,7 +1206,21 @@ public class UnionFind {
 
 
 
+
+
+
+
 ### 单调栈
+
+实现:
+
+
+
+
+
+题目:
+
+
 
 
 
@@ -1174,6 +1234,45 @@ t1:
 
 思路:
 
+对于头结点可以向左子树要信息，向右树要信息，自身也分本身参与的情况和不参与的情况，对于参与的情况:最大距离=左树树高+右树树高+1
+
+对于不参与的情况:最大距离=Math.max(左树的最大距离,右树的最大距离).
+
+最终最大距离为Math.max(参与时的最大距离,不参与时的最大距离)
+
+代码实现:
+
+```java
+public class morris {
+    public  int MaxDistance(TreeNode head){
+        return process(head).maxDistance;
+    }
+    public Info process(TreeNode head){
+        //baseCase
+        if(head==null){
+            return new Info(0,0);
+        }
+        Info leftInfo=process(head.left);
+        Info rightInfo=process(head.right);
+        int maxDistance=Math.max(Math.max(leftInfo.maxDistance,rightInfo.maxDistance),leftInfo.height+rightInfo.height+1);
+        int height=leftInfo.height+rightInfo.height+1;
+        return new Info(maxDistance,height);
+    }
+}
+class Info{
+    public int maxDistance;
+    public int height;
+    public Info(int maxDistance, int height) {
+        this.maxDistance = maxDistance;
+        this.height = height;
+    }
+}
+```
+
+
+
+
+
 
 
 t2:
@@ -1182,6 +1281,59 @@ t2:
 
 思路:
 
+对于头结点可以向左子树要信息，向右树要信息，自身也分本身参与的情况和不参与的情况，对于参与的情况:最大欢乐值=自身欢乐值+左子树头结点不参与的情况的最大欢乐值+右子树头结点不参与的情况的最大欢乐值.对于不参与的情况:最大欢乐值=0+Math.max(左子树头结点参与的情况的最大欢乐值，左子树头结点不参与的情况的最大欢乐值)+Math.max(左子树头结点参与的情况的最大欢乐值，左子树头结点不参与的情况的最大欢乐值)
+
+代码实现:
+
+```java
+import java.util.List;
+
+public class maxHappy {
+    public int maxHappy(Employee boss){
+        return Math.max(process(boss).buHappy,process(boss).laiHappy);
+    }
+    public empInfo process(Employee emp){
+        //baseCase
+        if(emp.nexts==null){
+            return new empInfo(emp.Happy,0);
+        }
+        int laiHappy=emp.Happy;
+        int buHappy=0;
+        for(Employee e:emp.nexts){
+            empInfo info=process(e);
+            laiHappy+=info.buHappy;
+            buHappy+=Math.max(info.buHappy,info.laiHappy);
+        }
+        return new empInfo(laiHappy,buHappy);
+    }
+}
+class Employee{
+    public int Happy;
+    public List<Employee>nexts;
+}
+class empInfo{
+    public int laiHappy;
+    public int buHappy;
+
+    public empInfo(int laiHappy, int buHappy) {
+        this.laiHappy = laiHappy;
+        this.buHappy = buHappy;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 二叉树的morris遍历
@@ -1189,3 +1341,7 @@ t2:
 解决问题:一种二叉树的遍历方式，利用大量的空指针使时间复杂度 o(n)空间复杂度o(1)
 
 遍历细节:![image-20220523112107174](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523112107174.png)
+
+有左树的结点能到达两次，没有左树的结点只能到达一次
+
+代码实现
