提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -1344,4 +1344,40 @@ class empInfo{
 
 有左树的结点能到达两次，没有左树的结点只能到达一次
 
+原理:递归遍历是通过压栈来实现子节点向父节点的跳转的,而morris遍历是通过指针指向的形式从子节点到父节点的跳转的
+
 代码实现
+
+```java
+public class Morris {
+    public static void morris(TreeNode head){
+        if(head==null){
+            return;
+        }
+        TreeNode cur=head;
+        TreeNode mostRight;
+        while(cur!=null){
+            mostRight=cur.left;
+            //cur的左树不为空时执行
+            if(mostRight!=null){
+                //找到mostRight
+                while(mostRight.right!=null&&mostRight.right!=cur){
+                    mostRight=mostRight.right;
+                }
+                //第一次来到cur时
+                if(mostRight.right==null){
+                    mostRight.right=cur;
+                    cur=cur.left;
+                    continue;
+                }else{//第二次来到cur
+                    mostRight.right=null;
+                }
+            }
+            cur=cur.right;
+        }
+    }
+}
+```
+
+估计事件复杂度
+
