--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -1190,9 +1190,37 @@ public class UnionFind {
 
 ### Manacher算法
 
-解决问题:
+解决问题:计算一个字符串的最长回文子串的长度,以时间复杂度o(n)完成
 
-基本原理:
+
+
+思路:
+
+对每个字符的左右两边加上一个特殊字符"#",在这个新生成的字符串中以每个字符为中心向左右两边扩张，计算回文子串的长度比如
+
+122131221=>#1#2#2#1#3#1#2#2#1# 生成数组为:[1,3,1,3,9,3,1,3,1,19,1,3,1,3,1,3,1,3,1].然后整除2得到[0,1,0,1,4,1,0,1,0,9,0,1,0,1,0,1,0,1,0],事件复杂度o(n的平方)
+
+
+
+Manacher算法基本原理:
+
+使用Manacher算法可以加速计算，一些字符无需遍历计算回文.
+
+设置一个R表示之前所扩的回文的最右边界初始值-1,此时取得最右边界的中心记为C初始值为,把要计算的字符的位置记为i,i的范围为从0到s.length
+
+此时有几种情况
+
+1.i>R:暴力扩张,同时更新R和C
+
+2.i<R:首先计算出i关于C的对称点i2再分类:
+
+- 如果i2在L和C之间,i的数值等于i2的数值
+- 如果i2在L左边,i的数值等于r-i
+- 如果i2恰好在边界上,i的数值等于r-i+x，其中对x的算法为:对R继续向右扩张
+
+
+
+代码实现:
 
 
 
