提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -168,7 +168,7 @@ public static int search(int []nums,int l,int r){
 
 
 
-5.15
+### 5.15
 
 每日一题
 
@@ -298,7 +298,10 @@ class Solution {
 
 
 
-5.16每日一题
+### 5.16
+
+每日一题
+
 ![image-20220516115426741](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220516115426741.png)
 
 最近才学了二叉树的前序，中序，后序遍历，那就用中序遍历的方法找到后继节点。
@@ -435,7 +438,7 @@ class Solution {
 }
 ```
 
-5.17
+### 5.17
 
 状态dp问题:
 
@@ -471,7 +474,7 @@ class Solution {
 
 ![image-20220518001613498](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001613498.png)
 
-5.18
+### 5.18
 
 ![image-20220519221123673](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220519221123673.png)
 
@@ -496,9 +499,7 @@ public int minMoves2(int[] nums) {
 
 快速选择使事件复杂度进一步减小,用于解决topk问题
 
-
-
-
+### 5.19
 
 215 数组中第k大的元素
 ![image-20220519221404241](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220519221404241.png)
@@ -515,7 +516,9 @@ public int minMoves2(int[] nums) {
 
 平均时间复杂度on 
 
-5.20 每日一题
+### 5.20 
+
+每日一题
 
 自己做:暴力
 
@@ -545,7 +548,7 @@ class Solution {
 }
 ```
 
-5.21
+### 5.21
 
 每日一题(简单)
 
@@ -722,7 +725,7 @@ class Solution {
 
 错误案例
 
-5.22
+### 5.22
 
 周赛
 
@@ -835,3 +838,313 @@ class Solution {
 4.
 
 ![image-20220522182725855](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522182725855.png)
+
+### 5.23
+
+每日一题
+
+![image-20220523213858039](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523213858039.png)
+
+这道题是做过的吧..
+
+bfs+并查集
+
+错误:我想不明白为什么会栈溢出,该return的时候我return了呀,就是[i,j]越界或者now==0的时候return,为什么递归跑不完呢
+
+```java
+class Solution {
+    int ans=0;
+    public int cutOffTree(List<List<Integer>> forest) {
+        int m=forest.size();
+        int n=forest.get(0).size();
+        process(forest,0,0,m,n);
+        return ans;
+    }
+    public void process(List<List<Integer>> forest,int i,int j,int m,int n){
+        if(i<0||i>=m||j<0||j>=n){
+            return;
+        }
+        int now=forest.get(i).get(j);
+        if(now==0){
+            return;
+        }
+        if(now>1){
+            now=1;
+            ans++;
+        }
+        process(forest,i-1,j,m,n);
+        process(forest,i+1,j,m,n);
+        process(forest,i,j-1,m,n);
+        process(forest,i,j+1,m,n);
+
+    }
+}
+```
+
+正解:
+
+bfs
+
+```java
+class Solution {
+    int N = 50;
+    int[][] g = new int[N][N];
+    int n, m;
+    public int cutOffTree(List<List<Integer>> forest) {
+        n = forest.size(); m = forest.get(0).size();
+        List<int[]> list = new ArrayList<>();
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < m; j++) {
+                g[i][j] = forest.get(i).get(j);
+                if (g[i][j] > 1) list.add(new int[]{g[i][j], i, j});
+            }
+        }
+        Collections.sort(list, (a,b)->a[0]-b[0]);
+        int x = 0, y = 0, ans = 0;
+        for (int[] ne : list) {
+            int nx = ne[1], ny = ne[2];
+            int d = bfs(x, y, nx, ny);
+            if (d == -1) return -1;
+            ans += d;
+            x = nx; y = ny;
+        }
+        return ans;
+    }
+    int[][] dirs = new int[][]{{0,1},{0,-1},{1,0},{-1,0}};
+    int bfs(int X, int Y, int P, int Q) {
+        if (X == P && Y == Q) return 0;
+        boolean[][] vis = new boolean[n][m];
+        Deque<int[]> d = new ArrayDeque<>();
+        d.addLast(new int[]{X, Y});
+        vis[X][Y] = true;
+        int ans = 0;
+        while (!d.isEmpty()) {
+            int size = d.size();
+            while (size-- > 0) {
+                int[] info = d.pollFirst();
+                int x = info[0], y = info[1];
+                for (int[] di : dirs) {
+                    int nx = x + di[0], ny = y + di[1];
+                    if (nx < 0 || nx >= n || ny < 0 || ny >= m) continue;
+                    if (g[nx][ny] == 0 || vis[nx][ny]) continue;
+                    if (nx == P && ny == Q) return ans + 1;
+                    d.addLast(new int[]{nx, ny});
+                    vis[nx][ny] = true;
+                }
+            }
+            ans++;
+        }
+        return -1;
+    }
+}
+
+
+作者：AC_OIer
+链接：https://leetcode.cn/problems/cut-off-trees-for-golf-event/solution/by-ac_oier-ksth/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+
+
+
+lc1.两数之和
+
+
+
+lc2.两数相加
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+    int x=0;
+    int y=0;
+    int z=0;
+    ListNode ans;
+    if(l1==null||l2==null){
+        return l1==null?l2:l1;
+    }
+    x=l1.val+l2.val>=10?1:0;
+    y=l1.val+l2.val-10*x;
+    ans=new ListNode(y);
+    ListNode cur1=ans;
+    //l1,l2的公共部分
+    while(l1.next!=null&&l2.next!=null){
+        l1=l1.next;
+        l2=l2.next;
+        z=x;
+        x=l1.val+l2.val+z>=10?1:0;
+        y=l1.val+l2.val-10*x+z;
+        cur1.next=new ListNode(y);
+        cur1=cur1.next;
+    }
+    //l1,l2的公共部分之外.
+    ListNode cur=l1.next==null?l2:l1;
+    while(cur.next!=null){
+        cur=cur.next;
+        z=x;
+        x=cur.val+z>=10?1:0;
+        y=cur.val+z-10*x;
+        cur1.next=new ListNode(y);
+        cur1=cur1.next;
+    }
+    if(x==1){
+        cur1.next=new ListNode(1);
+    }
+    return ans;
+    }
+}
+```
+
+
+
+lc3.无重复字符的最长子串
+
+滑动窗口
+
+```java
+    public int lengthOfLongestSubstring(String s) {
+        char[] chars = s.toCharArray();
+        HashSet<Character> set = new HashSet<Character>();
+        int l=0;
+        int r=0;
+        int ans=0;
+        while (r<chars.length&&l<=r){
+            if(!set.contains(chars[r])){
+                set.add(chars[r]);
+                r++;
+            }else{
+                set.remove(chars[l]);
+                l++;
+            }
+            ans=Math.max(ans,r-l);
+        }
+        return ans;
+    }
+```
+
+
+
+lc5.最长回文子串
+
+
+
+往届周赛题
+
+
+
+253场周赛
+
+难度3456
+
+5838.检查字符是否为数组前缀
+
+模拟+动态判断
+
+```java
+    public boolean isPrefixString(String s, String[] words) {
+        StringBuilder str= new StringBuilder();
+        for(String word:words){
+            str.append(word);
+            if(str.toString().equals(s)){
+                return true;
+            }
+        }
+        return false;
+    }
+
+```
+
+
+
+5839.移除石子使总数最小
+
+使用一个堆维护得到最大值.
+
+```java
+class Solution {
+    public int minStoneSum(int[] piles, int k) {
+        int ans=0;
+        PriorityQueue<Integer> heap = new PriorityQueue<>(new myComparator());
+        for(int i:piles){
+            heap.add(i);
+        }
+        while(k>0&&!heap.isEmpty()){
+            int now=(heap.poll()+1)/2;
+            heap.add(now);
+            k--;
+        }
+        while(!heap.isEmpty()){
+            ans+=heap.poll();
+        }
+        return ans;
+    }
+}
+class myComparator implements  Comparator<Integer>{
+    @Override
+    public int compare(Integer o1, Integer o2) {
+        return o2-o1;
+    }
+}
+```
+
+
+
+5840.使字符串平衡的最小交换次数
+
+逻辑出错,我的思路是维护一个栈，如果要加入的元素是]而栈顶元素是[,则把栈顶弹出,但是这是错误的，
+
+比如]]\][[[,
+
+执行下述操作可以使字符串变成平衡字符串：
+- 交换下标 0 和下标 4 对应的括号，s = "[]][][" 。
+- 交换下标 1 和下标 5 对应的括号，s = "[[][]]" 。
+  最终字符串变成 "[[][]]" 。
+
+正确答案:
+
+```java
+class Solution {
+    public int minSwaps(String s) {
+        int count=0，res=0;
+        for (char c : s.toCharArray()) {
+            if(c=='['){
+                count++;
+            }else{
+                count--;
+                if(count<0){
+                    //得到]，res++
+                    count=0;
+                    res++;
+                }
+            }
+        }
+        return (res+1)/2;
+    }
+
+}
+```
+
+讨论中提到了可以使用前缀和的方式,有机会了解一下.
+
+
+
+5841.找出每个位置为止最长的有效障碍赛跑路线
+
+
+
+
+
+280场周赛
+
+难度3456
+
