--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -1053,9 +1053,10 @@ public class island {
     }
     public static void infect(int[][]m,int i,int j,int N,int M){
         //如果i,j,N,M越界则直接return
-        if(i<0||i>=N||j<0||j>M){
+        if(i<0||i>=N||j<0||j>M||m[i][j]!=1){
             return;
         }
+        //等于1的情况
         m[i][j]=2;
         infect(m,i-1,j,N,M);
         infect(m,i+1,j,N,M);
