提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -1371,6 +1371,8 @@ class empInfo{
 
 遍历细节:![image-20220523112107174](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523112107174.png)
 
+![image-20220524130443069](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220524130443069.png)
+
 有左树的结点能到达两次，没有左树的结点只能到达一次
 
 原理:递归遍历是通过压栈来实现子节点向父节点的跳转的,而morris遍历是通过指针指向的形式从子节点到父节点的跳转的
