--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1148,3 +1148,62 @@ class Solution {
 
 难度3456
 
+### 5.24
+
+每日一题
+
+![image-20220524130321204](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220524130321204.png)
+
+想使用morris遍历将空间复杂度降低
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+    class Solution {
+        public boolean isUnivalTree(TreeNode root){
+        TreeNode cur=root;
+        TreeNode rightNode;
+        while(cur!=null) {
+            int val=cur.val;
+            rightNode=root.left;
+            if (rightNode != null) {
+                while (rightNode.right != null && rightNode.right != cur) {
+                    rightNode = rightNode.right;
+                }
+                if (rightNode.right == null) {
+                    rightNode.right = cur;
+                    cur = cur.left;
+                    if(val!=cur.val){
+                        return false;
+                    }
+                    continue;
+                } else {
+                    rightNode.right = null;
+                }
+            }
+            cur=cur.right;
+            if(cur.val!=val){
+                return false;
+            }
+        }
+        return true;
+    }
+}
+
+```
+
+
+
