提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1154,56 +1154,67 @@ class Solution {
 
 ![image-20220524130321204](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220524130321204.png)
 
-想使用morris遍历将空间复杂度降低
+1.使用morris遍历将空间复杂度降低
 
 ```java
-/**
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode() {}
- *     TreeNode(int val) { this.val = val; }
- *     TreeNode(int val, TreeNode left, TreeNode right) {
- *         this.val = val;
- *         this.left = left;
- *         this.right = right;
- *     }
- * }
- */
     class Solution {
-        public boolean isUnivalTree(TreeNode root){
-        TreeNode cur=root;
-        TreeNode rightNode;
-        while(cur!=null) {
-            int val=cur.val;
-            rightNode=root.left;
-            if (rightNode != null) {
-                while (rightNode.right != null && rightNode.right != cur) {
-                    rightNode = rightNode.right;
+        public boolean isUnivalTree(TreeNode head){
+        if(head==null){
+            return true;
+        }
+        TreeNode cur=head;
+        TreeNode mostRight;
+        while(cur!=null){
+            mostRight=cur.left;
+            //cur的左树不为空时执行
+            if(mostRight!=null){
+                //找到mostRight
+                while(mostRight.right!=null&&mostRight.right!=cur){
+                    mostRight=mostRight.right;
                 }
-                if (rightNode.right == null) {
-                    rightNode.right = cur;
-                    cur = cur.left;
-                    if(val!=cur.val){
-                        return false;
-                    }
+                //第一次来到cur时
+                if(mostRight.right==null){
+                    mostRight.right=cur;
+                    cur=cur.left;
                     continue;
-                } else {
-                    rightNode.right = null;
+                }else{//第二次来到cur
+                    mostRight.right=null;
                 }
             }
+            if(cur.val!=head.val){
+                return false;
+            }
             cur=cur.right;
-            if(cur.val!=val){
+        }
+        return true;
+    }
+}
+```
+
+
+
+2.正常递归动态判断
+
+```java
+class Solution {
+    public boolean isUnivalTree(TreeNode root) {
+        if (root == null) {
+            return true;
+        }
+        if (root.left != null) {
+            if (root.val != root.left.val || !isUnivalTree(root.left)) {
+                return false;
+            }
+        }
+        if (root.right != null) {
+            if (root.val != root.right.val || !isUnivalTree(root.right)) {
                 return false;
             }
         }
         return true;
     }
 }
-
 ```
 
-
+### 5.25
 
