提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1218,11 +1218,312 @@ class Solution {
 
 ### 5.25
 
-每日一题
+1.每日一题
+
+![image-20220526215749668](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220526215749668.png)
+
+```java
+        public int findSubstringInWraproundString(String p) {
+            int pre=1;
+            int ans=0;
+            String str="";
+        HashSet<String> set = new HashSet<>();
+        for (int i = 0; i < p.length(); i++) {
+            if(i>=1&&(p.charAt(i)-p.charAt(i-1)==1||(p.charAt(i)=='a'&&p.charAt(i-1)=='z'))){
+                pre++;
+                str+=p.charAt(i);
+            }else {
+                pre=1;
+                str="";
+                str+=p.charAt(i);
+            }
+            if(!set.contains(str)) {
+                ans += pre;
+                set.add(str);
+                String str2="";
+                str2+=p.charAt(i);
+                set.add(str2);
+            }
+        }
+        return ans;
+    }
+```
+
+草有点小bug
+
+```java
+class Solution {
+    public int findSubstringInWraproundString(String p) {
+        int[] dp = new int[26];
+        int k = 0;
+        for (int i = 0; i < p.length(); ++i) {
+            if (i > 0 && (p.charAt(i) - p.charAt(i - 1) + 26) % 26 == 1) { // 字符之差为 1 或 -25
+                ++k;
+            } else {
+                k = 1;
+            }
+            dp[p.charAt(i) - 'a'] = Math.max(dp[p.charAt(i) - 'a'], k);
+        }
+        return Arrays.stream(dp).sum();
+    }
+}
+```
+
+
+
+
 
 前缀和+动态规划
 
-前缀和详解:
+初识前缀和，后面填坑:
 
 1.
+
+
+
+2.找出一个二维数组中在同一行中最大，同一列中最小的坐标
+
+模拟即可
+
+```java
+public class test {
+    public static void main(String[] args) {
+        int[][] arrs=new int[5][5];
+        arrs[0]= new int[]{1, 2, 3, 4, 5};
+        arrs[1]=new int[]{ 1  ,2 ,8 ,8 ,6 };
+        arrs[2]=new int[]{ 8  ,1 ,5 ,2 ,6 };
+        arrs[3]=new int[]{ 14 ,26,32,8 ,21 };
+        arrs[4]=new int[]{ 155,65,6 ,25,8 };
+
+        int[] biggest = new int[5];
+        int big;
+        int small;
+        int[] smallest=new int [5];
+        for (int i=0; i < 5; i++) {
+            big = 0;
+            for (int j = 0; j < 5; j++) {
+                if (arrs[i][j] > big) {
+                    big = arrs[i][j];
+                    biggest[i] = j;
+                }
+            }
+        }
+        for (int i=0; i < 5; i++) {
+            small = Integer.MAX_VALUE;
+            for (int j = 0; j < 5; j++) {
+                if (arrs[j][i] <small ) {
+                    small=arrs[j][i];
+                    smallest[i] = j;
+                }
+            }
+        }
+        for (int i = 0; i < 5; i++) {
+            if (smallest[biggest[i]] == i) {
+                System.out.println(i+","+biggest[i]);
+            }
+        }
+    }
+}
+```
+
+### 5.26
+
+每日一题
+
+699掉落的方块
+
+![image-20220526143436482](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220526143436482.png)
+
+初识线段树,后面填坑
+
+对于值域爆炸，查询有限的问题采用的思路:
+
+1.模拟
+
+2.有序集合(红黑树)
+
+3.线段树(动态开点或离散化+线段树),对于非强制在线的情况可以直接使用离散化，对于强制在线的情况只能使用动态开点.
+
+例如:729.我的日程安排1
+
+![image-20220526144212977](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220526144212977.png)
+
+1.模拟:自然思维
+
+使用一个列表，遍历每一个list中的每一个数组检查book是否会与list中的时间冲突，若冲突则返回false,否则将其添加到list中并返回true;
+
+```java
+class MyCalendar {
+    List<int[]> list = new ArrayList<>();
+    public boolean book(int start, int end) {
+        end--;
+        for (int[] info : list) {
+            int l = info[0], r = info[1];
+            if (start > r || end < l) continue;
+            return false;
+        }
+        list.add(new int[]{start, end});
+        return true;
+    }
+}
+```
+
+2.红黑树
+
+```java
+class MyCalendar {
+    TreeMap<Integer, Integer> tm = new TreeMap<>();    
+    public boolean book(int start, int end) {
+        Integer prev = tm.floorKey(start), next = tm.ceilingKey(start);
+        if ((prev == null || tm.get(prev) <= start) && (next == null || end <= next)) {
+            tm.put(start, end);
+            return true;
+        }
+        return false;
+    }
+}
+```
+
+3.线段树(动态开点)
+
+这道题属于强制在线的情况必须使用动态开点.
+
+关键字:懒标记,开点,插入，查询,自定义结构体
+
+```java
+class MyCalendar {
+    class Node {
+        // ls 和 rs 分别代表当前节点的左右子节点在 tr 的下标
+        // val 代表当前节点有多少数
+        // add 为懒标记
+        int ls, rs, add, val;
+    }
+    int N = (int)1e9, M = 120010, cnt = 1;
+    Node[] tr = new Node[M];
+    void update(int u, int lc, int rc, int l, int r, int v) {
+        if (l <= lc && rc <= r) {
+            tr[u].val += (rc - lc + 1) * v;
+            tr[u].add += v;
+            return ;
+        }
+        lazyCreate(u);
+        pushdown(u, rc - lc + 1);
+        int mid = lc + rc >> 1;
+        if (l <= mid) update(tr[u].ls, lc, mid, l, r, v);
+        if (r > mid) update(tr[u].rs, mid + 1, rc, l, r, v);
+        pushup(u);
+    }
+    int query(int u, int lc, int rc, int l, int r) {
+        if (l <= lc && rc <= r) return tr[u].val;
+        lazyCreate(u);
+        pushdown(u, rc - lc + 1);
+        int mid = lc + rc >> 1, ans = 0;
+        if (l <= mid) ans = query(tr[u].ls, lc, mid, l, r);
+        if (r > mid) ans += query(tr[u].rs, mid + 1, rc, l, r);
+        return ans;
+    }
+    void lazyCreate(int u) {
+        if (tr[u] == null) tr[u] = new Node();
+        if (tr[u].ls == 0) {
+            tr[u].ls = ++cnt;
+            tr[tr[u].ls] = new Node();
+        }
+        if (tr[u].rs == 0) {
+            tr[u].rs = ++cnt;
+            tr[tr[u].rs] = new Node();
+        }
+    }
+    void pushdown(int u, int len) {
+        tr[tr[u].ls].add += tr[u].add; tr[tr[u].rs].add += tr[u].add;
+        tr[tr[u].ls].val += (len - len / 2) * tr[u].add; tr[tr[u].rs].val += len / 2 * tr[u].add;
+        tr[u].add = 0;
+    }
+    void pushup(int u) {
+        tr[u].val = tr[tr[u].ls].val + tr[tr[u].rs].val;
+    }
+    public boolean book(int start, int end) {
+        if (query(1, 1, N + 1, start + 1, end) > 0) return false;
+        update(1, 1, N + 1, start + 1, end, 1);
+        return true;
+    }
+}
+```
+
+
+
+
+
+
+
+对于本题属于非强制在线的情况，方式一见:933最近的请求次数
+
+我们使用动态开点
+
+具体的，我们将顺序放置方块的操作（假设当前方块的左端点为 aaa，边长为 lenlenlen，则有右端点为 b=a+lenb = a + lenb=a+len），分成如下两步进行：
+
+    查询当前范围 [a,b][a, b][a,b] 的最大高度为多少，假设为 curcurcur；
+    更新当前范围 [a,b][a, b][a,b] 的最新高度为 cur+lencur + lencur+len。
+
+因此这本质上是一个「区间修改 + 区间查询」的问题，我们需要实现带「懒标记」的线段树，从而确保在进行「区间修改」时复杂度仍为 O(log⁡n)O(\log{n})O(logn)。
+
+```java
+class Solution {
+    class Node {
+        // ls 和 rs 分别代表当前区间的左右子节点所在 tr 数组中的下标
+        // val 代表当前区间的最大高度，add 为懒标记
+        int ls, rs, val, add;
+    }
+    int N = (int)1e9, cnt = 0;
+    Node[] tr = new Node[1000010];
+    void update(int u, int lc, int rc, int l, int r, int v) {
+        if (l <= lc && rc <= r) {
+            tr[u].val = v;
+            tr[u].add = v;
+            return ;
+        }
+        pushdown(u);
+        int mid = lc + rc >> 1;
+        if (l <= mid) update(tr[u].ls, lc, mid, l, r, v);
+        if (r > mid) update(tr[u].rs, mid + 1, rc, l, r, v);
+        pushup(u);
+    }
+    int query(int u, int lc, int rc, int l, int r) {
+        if (l <= lc && rc <= r) return tr[u].val;
+        pushdown(u);
+        int mid = lc + rc >> 1, ans = 0;
+        if (l <= mid) ans = query(tr[u].ls, lc, mid, l, r);
+        if (r > mid) ans = Math.max(ans, query(tr[u].rs, mid + 1, rc, l, r));
+        return ans;
+    }
+    void pushdown(int u) {
+        if (tr[u] == null) tr[u] = new Node();
+        if (tr[u].ls == 0) {
+            tr[u].ls = ++cnt;
+            tr[tr[u].ls] = new Node();
+        }
+        if (tr[u].rs == 0) {
+            tr[u].rs = ++cnt;
+            tr[tr[u].rs] = new Node();
+        }
+        if (tr[u].add == 0) return ;
+        int add = tr[u].add;
+        tr[tr[u].ls].add = add; tr[tr[u].rs].add = add;
+        tr[tr[u].ls].val = add; tr[tr[u].rs].val = add;
+        tr[u].add = 0;
+    }
+    void pushup(int u) {
+        tr[u].val = Math.max(tr[tr[u].ls].val, tr[tr[u].rs].val);
+    }
+    public List<Integer> fallingSquares(int[][] ps) {
+        List<Integer> ans = new ArrayList<>();
+        tr[1] = new Node();
+        for (int[] info : ps) {
+            int x = info[0], h = info[1], cur = query(1, 1, N, x, x + h - 1);
+            update(1, 1, N, x, x + h - 1, cur + h);
+            ans.add(tr[1].val);
+        }
+        return ans;
+    }
+}
+```
 
