提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1527,3 +1527,153 @@ class Solution {
 }
 ```
 
+### 5.27
+
+刷蓝桥杯
+
+### 5.28
+
+14.最长公共前缀
+
+循环处理1
+
+```java
+class Solution {
+    public String longestCommonPrefix(String[] strs) {
+    String prefix=strs[0];
+        for (int i = 0; i < strs.length; i++) {
+            prefix=process(prefix,strs[i]);
+        }
+        return prefix;
+    }
+    public String process(String prefix,String str){
+            int n=Math.min(prefix.length(),str.length());
+            String ans="";
+        for (int i = 0; i < n; i++) {
+            if(prefix.charAt(i)!=str.charAt(i)){
+                return ans;
+            }
+            ans+=prefix.charAt(i);
+        }
+        return ans;
+    }
+}
+```
+
+```java
+    class Solution {
+    public String longestCommonPrefix(String[] strs) {
+        if (strs == null || strs.length == 0) {
+            return "";
+        }
+        String prefix = strs[0];
+        int count = strs.length;
+        for (int i = 1; i < count; i++) {
+            prefix = longestCommonPrefix(prefix, strs[i]);
+            if (prefix.length() == 0) {
+                break;
+            }
+        }
+        return prefix;
+    }
+
+    public String longestCommonPrefix(String str1, String str2) {
+        int length = Math.min(str1.length(), str2.length());
+        int index = 0;
+        while (index < length && str1.charAt(index) == str2.charAt(index)) {
+            index++;
+        }
+        return str1.substring(0, index);
+    }
+}
+
+```
+
+循环+判断
+
+```java
+        public String longestCommonPrefix(String[] strs) {
+        for (int i = 0; i < strs[0].length(); i++) {
+            char c=strs[0].charAt(i);
+            for (int j = 1; j < strs.length; j++) {
+                if(i==strs[j].length()||strs[j].charAt(i)!=c){
+                    return strs[0].substring(0,i);
+                }
+            }
+        }
+        return strs[0];
+    }
+```
+
+20.有效的括号
+
+```java
+class Solution {
+        public boolean isValid(String s) {
+        Stack<Character> stack = new Stack<>();
+        HashMap<Character, Character> map = new HashMap<>();
+        map.put('}','{');
+        map.put(')','(');
+        map.put(']','[');
+        for (int i = 0; i < s.length(); i++) {
+            if(map.containsKey(s.charAt(i))) {
+                if (!stack.isEmpty() && stack.peek() == map.get(s.charAt(i))) {
+                    stack.pop();
+                }else {
+                    return false;
+                }
+            }else{
+                stack.add(s.charAt(i));
+            }
+        }
+        return stack.isEmpty();
+    }
+}
+```
+
+```java
+class Solution {
+        public boolean isPalindrome(int x) {
+            if(x<0){
+                return false;
+            }
+        String s = String.valueOf(x);
+        int l=0;
+        int r=s.length()-1;
+        while(l<=r&&s.charAt(l)==s.charAt(r)){
+            l++;
+            r--;
+        }
+        return s.length()%2==0?l-r==1:l-r==2;
+    }
+}
+```
+
+每日一题
+
+1021.删除最外层的括号
+
+```java
+    class Solution {
+    public String removeOuterParentheses(String s) {
+        StringBuffer res = new StringBuffer();
+        Deque<Character> stack = new ArrayDeque<Character>();
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            if (c == ')') {
+                stack.pop();
+            }
+            //没想到这一判断，最外层就是stack不为空的时候.
+            if (!stack.isEmpty()) {
+                res.append(c);
+            }
+            if (c == '(') {
+                stack.push(c);
+            }
+        }
+        return res.toString();
+    }
+}
+
+```
+
