--- a/算法/刷题/前缀和.md
+++ b/算法/刷题/前缀和.md
@@ -1,9 +1,25 @@
+模板
+
+```java
+public int countPrefix(int []arr){
+    int pre=0;
+    int ans=0;
+    for (int i = 0; i < arr.length; i++) {
+        //判断条件,在什么条件下让pre++
+        pre++;
+        
+        ans+=pre;
+    }
+    return ans;
+}
+```
+
 467.环绕字符串中唯一的子字符串
 
 ```java
 class Solution {
     public int findSubstringInWraproundString(String p) {
-        int[] dp = new int[26];
+        int[] dp = new int[26];//哈希表，判断以某个字符为结尾的子串个数
         int k = 0;
         for (int i = 0; i < p.length(); ++i) {
             if (i > 0 && (p.charAt(i) - p.charAt(i - 1) + 26) % 26 == 1) { // 字符之差为 1 或 -25
