提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1677,3 +1677,134 @@ class Solution {
 
 ```
 
+17.电话号码的字母组合
+
+```java
+class Solution {
+        public List<String> letterCombinations(String digits) {
+        if(digits==null||digits.length()==0){
+            return new ArrayList<String>();
+        }
+        ArrayList<String> combinations = new ArrayList<>();
+        HashMap<Character, String> map = new HashMap<>();
+        map.put('2',"abc");
+        map.put('3',"def");
+        map.put('4',"ghi");
+        map.put('5',"jkl");
+        map.put('6',"mno");
+        map.put('7',"pqrs");
+        map.put('8',"tuv");
+        map.put('9',"wxyz");
+        backtrack(digits,map,0,combinations, new StringBuffer());
+        return combinations;
+    }
+    public void backtrack(String digits,HashMap<Character, String> map,int index,List<String> combinations,StringBuffer combination){
+        //baseCase
+            if(index==digits.length()){
+            combinations.add(combination.toString());
+            return;
+        }
+            //具体
+        char digit = digits.charAt(index);
+        String alphas = map.get(digit);
+        for (int i = 0; i < alphas.length(); i++) {
+            combination.append(alphas.charAt(i));
+            backtrack(digits, map, index+1, combinations, combination);
+            combination.deleteCharAt(index);
+        }
+    }
+}
+```
+
+数组的原地算法
+
+
+
+27.移除元素
+
+不需要真的把最后几个元素给弄掉,只需要返回时把数字减小就行了，只会返回数组前几位.
+
+```java
+class Solution {
+        public int removeElement(int[] nums, int val) {
+            int count=0;
+            int pre=0;
+        for (int i = 0; i < nums.length; i++) {
+            if(nums[i]==val){
+                count++;
+            }
+            if(nums[i]!=val){
+                pre=i;
+                nums[i-count]=nums[i];
+            }
+        }
+        return nums.length-count;
+    }
+}
+```
+
+26.删除有序数组中的重复项
+
+犯了个小错误
+
+```java
+if(!set.contains(nums[i])){
+
+...
+
+}
+
+if(set.contains(nums[i])){
+
+...}
+```
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        HashSet<Integer> set = new HashSet<>();
+        int count=0;
+        for (int i = 0; i < nums.length; i++) {
+            if(!set.contains(nums[i])){
+                set.add(nums[i]);
+                nums[i-count]=nums[i];
+            }
+            else{
+                count++;
+            }
+        }
+        return nums.length-count;
+    }
+}
+```
+
+28.实现strStr()
+
+```java
+class Solution {
+        public int strStr(String haystack, String needle) {
+            if(needle==null||needle.length()==0){
+                return 0;
+            }
+            if(haystack.equals(needle)){
+                return 0;
+            }
+            int ans=-1;
+            boolean flag=true;
+        for (int i = 0; i < haystack.length()-needle.length()+1; i++) {
+            flag=true;
+            for (int j = 0; j < needle.length(); j++) {
+                if(needle.charAt(j)!=haystack.charAt(i+j)){
+                    flag=false;
+                }
+            }
+            if(flag){
+                ans=i;
+                break;
+            }
+        }
+        return ans;
+    }
+}
+```
+
