提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -1538,29 +1538,6 @@ class Solution {
 循环处理1
 
 ```java
-class Solution {
-    public String longestCommonPrefix(String[] strs) {
-    String prefix=strs[0];
-        for (int i = 0; i < strs.length; i++) {
-            prefix=process(prefix,strs[i]);
-        }
-        return prefix;
-    }
-    public String process(String prefix,String str){
-            int n=Math.min(prefix.length(),str.length());
-            String ans="";
-        for (int i = 0; i < n; i++) {
-            if(prefix.charAt(i)!=str.charAt(i)){
-                return ans;
-            }
-            ans+=prefix.charAt(i);
-        }
-        return ans;
-    }
-}
-```
-
-```java
     class Solution {
     public String longestCommonPrefix(String[] strs) {
         if (strs == null || strs.length == 0) {
@@ -1808,3 +1785,16 @@ class Solution {
 }
 ```
 
+### 5.29
+
+第79场双周赛
+
+四题,难度3456
+
+第295场周赛
+
+四题,难度3456
+
+![image-20220529140524068](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220529140524068.png)
+
+思路
